--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -1,4 +1,5 @@
 # Production Environment Variables
-# Update VITE_API_URL with your Railway backend URL after deployment
+# Update VITE_API_URL with your Fly.io backend URL after deployment
+# Format: https://your-app-name.fly.dev
 
-VITE_API_URL=https://footy-oracle-backend-production.up.railway.app
+VITE_API_URL=https://footy-oracle-backend.fly.dev
