--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,14 +22,14 @@
     "axios": "^1.6.2",
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
-    "mongoose": "^8.0.3"
-  },
-  "devDependencies": {
+    "mongoose": "^8.0.3",
+    "typescript": "^5.3.3",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.10.5",
-    "@types/node-cron": "^3.0.11",
-    "typescript": "^5.3.3",
+    "@types/node-cron": "^3.0.11"
+  },
+  "devDependencies": {
     "tsx": "^4.7.0",
     "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
