Update production API URL to Vercel backend

--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -1,5 +1,4 @@
 # Production Environment Variables
-# Update VITE_API_URL with your Fly.io backend URL after deployment
-# Format: https://your-app-name.fly.dev
+# Backend is now deployed on Vercel
 
-VITE_API_URL=https://footy-oracle-backend.fly.dev
+VITE_API_URL=https://footy-oracle-backend.vercel.app
