--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "cd apps/frontend && npm install && npm run build",
+  "buildCommand": "cd apps/frontend && npm ci && npm run build",
   "outputDirectory": "apps/frontend/dist",
-  "installCommand": "npm install --prefix apps/frontend",
-  "framework": "vite",
-  "devCommand": "cd apps/frontend && npm run dev"
+  "installCommand": "cd apps/frontend && npm ci",
+  "framework": "vite"
 }
