--- a/.github/workflows/daily-lm-training.yml
+++ b/.github/workflows/daily-lm-training.yml
@@ -2,7 +2,7 @@ name: 🤖 Daily LM Training Pipeline
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # 2 AM UTC daily
+    - cron: '0 4 * * *'  # 4 AM UTC daily (aligned with AI fixtures deployment)
   workflow_dispatch:      # Manual trigger
 
 jobs:
