--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,7 +13,8 @@
     "test:fixtures": "tsx test-fixtures.ts",
     "test:api": "tsx test-api-integration.ts api",
     "test:db": "tsx test-api-integration.ts db",
-    "test:all": "tsx test-api-integration.ts all"
+    "test:all": "tsx test-api-integration.ts all",
+    "seed:historical": "tsx src/scripts/seedHistoricalPredictions.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
