--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -11,7 +11,7 @@ on:
       - 'apps/frontend/**'
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -23,16 +23,14 @@ jobs:
           
       - name: Install dependencies
         working-directory: apps/frontend
-        run: npm ci
+        run: npm install
         
       - name: Build
         working-directory: apps/frontend
         run: npm run build
         
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: apps/frontend
+        run: |
+          echo "✅ Build successful!"
+          echo "🚀 Vercel deployment happens automatically via Vercel GitHub integration"
+          echo "📝 No manual deployment needed - Vercel watches the main branch"
