--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -11,7 +11,7 @@ on:
       - 'apps/backend/**'
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
           
       - name: Install dependencies
         working-directory: apps/backend
-        run: npm ci
+        run: npm install
         
       - name: Build
         working-directory: apps/backend
@@ -35,5 +35,6 @@ jobs:
         
       - name: Deploy to Railway
         run: |
-          echo "Backend deployment configured via Railway GitHub integration"
-          echo "Push to main branch triggers automatic deployment"
+          echo "✅ Build successful!"
+          echo "🚂 Railway deployment happens automatically via Railway GitHub integration"
+          echo "📝 No manual deployment needed - Railway watches the main branch"
