--- a/.github/workflows/update-fixtures.yml
+++ b/.github/workflows/update-fixtures.yml
@@ -44,9 +44,10 @@ jobs:
           today = datetime.now().strftime('%Y-%m-%d')
           tomorrow = (datetime.now() + timedelta(days=1)).strftime('%Y-%m-%d')
           
+          # RapidAPI headers for API-Football
           headers = {
               'x-rapidapi-key': API_KEY,
-              'x-rapidapi-host': 'v3.football.api-sports.io'
+              'x-rapidapi-host': 'api-football-v1.p.rapidapi.com'
           }
           
           all_fixtures = []
@@ -55,7 +56,7 @@ jobs:
           print(f'📅 Fetching fixtures for {today}...')
           try:
               response = requests.get(
-                  f'https://v3.football.api-sports.io/fixtures?date={today}',
+                  f'https://api-football-v1.p.rapidapi.com/v3/fixtures?date={today}',
                   headers=headers,
                   timeout=30
               )
@@ -76,7 +77,7 @@ jobs:
           print(f'📅 Fetching fixtures for {tomorrow}...')
           try:
               response = requests.get(
-                  f'https://v3.football.api-sports.io/fixtures?date={tomorrow}',
+                  f'https://api-football-v1.p.rapidapi.com/v3/fixtures?date={tomorrow}',
                   headers=headers,
                   timeout=30
               )
@@ -127,13 +128,13 @@ jobs:
           API_KEY = os.environ.get('API_FOOTBALL_KEY')
           headers = {
               'x-rapidapi-key': API_KEY,
-              'x-rapidapi-host': 'v3.football.api-sports.io'
+              'x-rapidapi-host': 'api-football-v1.p.rapidapi.com'
           }
           
           print('🔴 Fetching live matches...')
           try:
               response = requests.get(
-                  'https://v3.football.api-sports.io/fixtures?live=all',
+                  'https://api-football-v1.p.rapidapi.com/v3/fixtures?live=all',
                   headers=headers,
                   timeout=30
               )
