✅ Use RapidAPI format matching backend apiFootballService.ts

--- a/.github/workflows/update-fixtures.yml
+++ b/.github/workflows/update-fixtures.yml
@@ -50,50 +50,43 @@ jobs:
           today = datetime.now().strftime('%Y-%m-%d')
           tomorrow = (datetime.now() + timedelta(days=1)).strftime('%Y-%m-%d')
           
-          # Try all possible header formats
-          header_formats = [
-              {'x-apisports-key': API_KEY},
-              {'x-rapidapi-key': API_KEY, 'x-rapidapi-host': 'v3.football.api-sports.io'},
-              {'x-api-key': API_KEY}
-          ]
+          # Use RapidAPI format (matches backend apiFootballService.ts)
+          headers = {
+              'x-rapidapi-key': API_KEY,
+              'x-rapidapi-host': 'v3.football.api-sports.io'
+          }
           
           all_fixtures = []
-          success = False
           
-          for idx, headers in enumerate(header_formats):
-              print(f'\\n🔍 Trying header format {idx + 1}: {list(headers.keys())}')
-              
-              url = f'https://v3.football.api-sports.io/fixtures?date={today}'
-              
-              try:
-                  response = requests.get(url, headers=headers, timeout=10)
-                  print(f'Status: {response.status_code}')
-                  
-                  if response.status_code == 200:
-                      data = response.json()
-                      if 'response' in data:
-                          today_fixtures = data['response']
-                          print(f'✅ SUCCESS! Found {len(today_fixtures)} fixtures for today')
-                          all_fixtures.extend(today_fixtures)
-                          
-                          # Fetch tomorrow with same headers
-                          url2 = f'https://v3.football.api-sports.io/fixtures?date={tomorrow}'
-                          response2 = requests.get(url2, headers=headers, timeout=10)
-                          if response2.status_code == 200:
-                              tomorrow_fixtures = response2.json()['response']
-                              print(f'✅ Found {len(tomorrow_fixtures)} fixtures for tomorrow')
-                              all_fixtures.extend(tomorrow_fixtures)
-                          
-                          success = True
-                          break
-                  else:
-                      print(f'❌ Failed: {response.text[:200]}')
-              except Exception as e:
-                  print(f'❌ Exception: {str(e)}')
+          # Fetch today's fixtures
+          print(f'📅 Fetching fixtures for {today}...')
+          url = f'https://v3.football.api-sports.io/fixtures?date={today}'
+          response = requests.get(url, headers=headers, timeout=10)
           
-          if not success:
-              print('\\n❌ ALL HEADER FORMATS FAILED!')
+          print(f'Status: {response.status_code}')
+          
+          if response.status_code == 200:
+              data = response.json()
+              today_fixtures = data.get('response', [])
+              all_fixtures.extend(today_fixtures)
+              print(f'✅ Today: {len(today_fixtures)} fixtures')
+          else:
+              print(f'❌ Error: {response.status_code}')
+              print(f'Response: {response.text[:500]}')
               exit(1)
+          
+          # Fetch tomorrow's fixtures
+          print(f'📅 Fetching fixtures for {tomorrow}...')
+          url = f'https://v3.football.api-sports.io/fixtures?date={tomorrow}'
+          response = requests.get(url, headers=headers, timeout=10)
+          
+          if response.status_code == 200:
+              data = response.json()
+              tomorrow_fixtures = data.get('response', [])
+              all_fixtures.extend(tomorrow_fixtures)
+              print(f'✅ Tomorrow: {len(tomorrow_fixtures)} fixtures')
+          else:
+              print(f'⚠️  Could not fetch tomorrow: {response.status_code}')
           
           # Save fixtures
           os.makedirs('shared/fixtures', exist_ok=True)
@@ -112,6 +105,9 @@ jobs:
               json.dump(metadata, f, indent=2)
           
           print(f'\\n✅ Total: {len(all_fixtures)} fixtures saved')
+          
+          if len(all_fixtures) == 0:
+              print('⚠️  WARNING: No fixtures fetched')
           "
       
       - name: 📊 Fetch live matches
@@ -125,28 +121,26 @@ jobs:
           
           API_KEY = os.environ['API_FOOTBALL_KEY']
           
-          # Try all possible header formats
-          header_formats = [
-              {'x-apisports-key': API_KEY},
-              {'x-rapidapi-key': API_KEY, 'x-rapidapi-host': 'v3.football.api-sports.io'},
-              {'x-api-key': API_KEY}
-          ]
+          # Use RapidAPI format (matches backend apiFootballService.ts)
+          headers = {
+              'x-rapidapi-key': API_KEY,
+              'x-rapidapi-host': 'v3.football.api-sports.io'
+          }
           
           print('🔴 Fetching live matches...')
+          url = 'https://v3.football.api-sports.io/fixtures?live=all'
+          response = requests.get(url, headers=headers, timeout=10)
           
-          for headers in header_formats:
-              url = 'https://v3.football.api-sports.io/fixtures?live=all'
-              response = requests.get(url, headers=headers, timeout=10)
+          if response.status_code == 200:
+              data = response.json()
+              live_matches = data.get('response', [])
+              print(f'✅ Found {len(live_matches)} live matches')
               
-              if response.status_code == 200:
-                  live_matches = response.json()['response']
-                  print(f'✅ Found {len(live_matches)} live matches')
-                  
-                  with open('shared/fixtures/live.json', 'w') as f:
-                      json.dump(live_matches, f, indent=2)
-                  break
+              with open('shared/fixtures/live.json', 'w') as f:
+                  json.dump(live_matches, f, indent=2)
           else:
-              print('⚠️  Could not fetch live matches')
+              print(f'⚠️  API returned status {response.status_code}')
+              print(f'Response: {response.text[:500]}')
               with open('shared/fixtures/live.json', 'w') as f:
                   json.dump([], f)
           "
